--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,12 +4,15 @@
   "description": "wd-201 assignments",
   "main": "index.js",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.8.0",
-    "sequelize": "^6.25.7"
+    "sequelize": "^6.25.7",
+    "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.28.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
